feat(docs): enhance documentation with static site generation, lightweight backend, and AI-ready features

--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -214,7 +214,7 @@ This means you'll need to:
 
 ## Server and API Handlers
 
-Ecopages provides a simple and intuitive way to create API endpoints and handle server-side logic. You can find more details in the [Server API](/docs/core/server-api) documentation.
+Ecopages provides a simple and intuitive way to create API endpoints and handle server-side logic. You can find more details in the [Server API](/docs/server/server-api) documentation.
 
 ```typescript
 import { EcopagesApp } from '@ecopages/core/adapters/bun/create-app';
