feat(starter-jsx): Improved starter-jsx example with latest updates

--- a/apps/docs/src/pages/docs/integrations/kitajs.mdx
+++ b/apps/docs/src/pages/docs/integrations/kitajs.mdx
@@ -12,7 +12,7 @@ export const getMetadata = () => ({
 
 # KitaJS Integration
 
-The `@ecopages/kitajs` package provides seamless integration with [Kita](https://kita.js.org/), enabling effortless rendering of JSX templates within the Ecopages framework.
+The `@ecopages/kitajs` package provides seamless integration with [Kita](https://kitajs.org/html/), enabling effortless rendering of JSX templates within the Ecopages framework.
 
 
 
