feat(cli): updated starter-jsx to use ecopages from npm and updated cli deps

--- a/examples/starter-jsx/src/pages/image.mdx
+++ b/examples/starter-jsx/src/pages/image.mdx
@@ -1,5 +1,5 @@
 import { BaseLayout } from '../layouts/base-layout/base-layout.kita';
-import { EcoImage } from '@ecopages/image-processor/component/html';
+import { EcoImage } from 'ecopages/image-processor/component/html';
 import { kitaKamakuraPng } from 'ecopages:images';
 
 export const config = {
@@ -8,7 +8,7 @@ export const config = {
 
 # Documentation
 
-The `@ecopages/image-processor` package provides powerful image processing capabilities for transforming and optimizing images for web use in your Ecopages project.
+The `ecopages/image-processor` package provides powerful image processing capabilities for transforming and optimizing images for web use in your Ecopages project.
 
 - [Docs](https://ecopages.app/docs/ecosystem/image-processor) for more information on the image processor.
 
