chore: update ecopages dependencies and scripts across examples

--- a/examples/starter-jsx/src/pages/image.mdx
+++ b/examples/starter-jsx/src/pages/image.mdx
@@ -1,5 +1,5 @@
 import { BaseLayout } from '../layouts/base-layout/base-layout.kita';
-import { EcoImage } from 'ecopages/image-processor/component/html';
+import { EcoImage } from '@ecopages/image-processor/component/html';
 import { kitaKamakuraPng } from 'ecopages:images';
 
 export const config = {
